fixed the layout break

--- a/assets/css/_layout.sass
+++ b/assets/css/_layout.sass
@@ -328,9 +328,11 @@ form
   padding: 20px
   color: #888
   .post-template
-    display: none !important
+    display: none
   .post
     display: flex
+    margin-bottom: 5px
+    padding: 5px
     .order
       font-size: 1.7em
       align-self: center
